metadata/unpackaged/objects/SFAR__c.object
<CustomObject>
    <fields>
        <fullName>Change_date__c</fullName>
        <label>Change date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commision_Number__c</fullName>
        <label>Commision Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeactivateUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be filled for deactivating any user.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFAR_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFAR_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reg_No__c</fullName>
        <label>Reg No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfarAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SfarAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SFAR&apos;s</relationshipLabel>
        <relationshipName>SFAR_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_and_Condition__c</fullName>
        <label>Terms and Condition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Records_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Records to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFAR_s2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vin__c</fullName>
        <label>Vin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SFAR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test_SFAR</fullName>
        <filterScope>Queue</filterScope>
        <label>test</label>
        <queue>test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SFAR-{00000}</displayFormat>
        <label>SFAR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFAR&apos;s</pluralLabel>
    <recordTypes>
        <fullName>Deactiavte</fullName>
        <active>true</active>
        <label>Deactiavte</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_One</fullName>
        <active>true</active>
        <label>New One</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>